@startuml
abstract class com.cleanup.todoc.database.TodocDatabase {
- {static} TodocDatabase INSTANCE
- {static} RoomDatabase.Callback sRoomDatabaseCallback
+ {abstract}ProjectDao projectDao()
+ {abstract}TaskDao taskDao()
+ {static} TodocDatabase getInstance(Context)
}
interface com.cleanup.todoc.database.daos.ProjectDao {
~ LiveData<List<Project>> getAll()
~ void insertAll(Project)
~ void delete(Project)
}
class com.cleanup.todoc.database.TodocViewModel {
~ TaskRepository taskRepository
+ <<Create>> TodocViewModel(Application)
+ LiveData<List<Project>> getAllProjects()
+ LiveData<List<TaskProject>> getAllTasks(MainActivity.SortMethod)
+ void addTask(Task)
+ void deleteTask(Task)
}
interface com.cleanup.todoc.database.daos.TaskDao {
~ LiveData<List<TaskProject>> getAll()
~ LiveData<List<TaskProject>> getOrder(SupportSQLiteQuery)
~ void insertOne(Task)
~ void insertAll(Task)
~ void delete(Task)
~ void deleteAll()
}
class com.cleanup.todoc.model.Task {
- long id
- long projectId
- String name
- long creationTimestamp
+ <<Create>> Task(long,String,long)
+ long getId()
+ void setId(long)
+ void setProjectId(long)
+ long getProjectId()
+ long getCreationTimestamp()
+ String getName()
+ void setName(String)
+ void setCreationTimestamp(long)
+ {static} Task[] populateData()
}
class com.cleanup.todoc.model.TaskProject {
+ Task task
+ Project project
}
class com.cleanup.todoc.ui.TasksAdapter {
- List<TaskProject> tasks
- DeleteTaskListener deleteTaskListener
~ <<Create>> TasksAdapter(List<TaskProject>,DeleteTaskListener)
~ void updateTasks(List<TaskProject>)
+ TaskViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(TaskViewHolder,int)
+ int getItemCount()
}
interface com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener {
~ void onDeleteTask(Task)
}
class com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder {
- AppCompatImageView imgProject
- TextView lblTaskName
- TextView lblProjectName
- AppCompatImageView imgDelete
- DeleteTaskListener deleteTaskListener
~ <<Create>> TaskViewHolder(View,DeleteTaskListener)
~ void bind(TaskProject)
}
class com.cleanup.todoc.ui.MainActivity {
- List<Project> allProjects
- List<TaskProject> tasks
- TasksAdapter adapter
- SortMethod sortMethod
+ AlertDialog dialog
- EditText dialogEditText
- Spinner dialogSpinner
- RecyclerView listTasks
- TextView lblNoTasks
~ TodocViewModel todocViewModel
+ void onCreate(Bundle)
+ void init()
+ boolean onCreateOptionsMenu(Menu)
+ boolean onOptionsItemSelected(MenuItem)
+ void onDeleteTask(Task)
- void onPositiveButtonClick(DialogInterface)
- void showAddTaskDialog()
- void addTask(Task)
- void updateTasks()
- AlertDialog getAddTaskDialog()
- void populateDialogSpinner()
}
class com.cleanup.todoc.database.TaskRepository {
~ ProjectDao projectDao
~ TaskDao taskDao
+ <<Create>> TaskRepository(Application)
+ LiveData<List<Project>> getProjects()
+ LiveData<List<TaskProject>> getTasks(String,String)
+ void addTask(Task)
+ void deleteTask(Task)
}
class com.cleanup.todoc.model.Project {
- long id
- String name
- int color
+ <<Create>> Project(String,int)
+ {static} Project[] populateData()
+ long getId()
+ String getName()
+ int getColor()
+ void setId(long)
+ void setName(String)
+ void setColor(int)
+ String toString()
}


com.cleanup.todoc.ui.TasksAdapter +-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
com.cleanup.todoc.ui.TasksAdapter +-- com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder
com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener <|-- com.cleanup.todoc.ui.TasksAdapter
com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener <|.. com.cleanup.todoc.ui.MainActivity
com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener <|-- com.cleanup.todoc.ui.TasksAdapter.TaskViewHolder
com.cleanup.todoc.model.Task <|-- com.cleanup.todoc.model.TaskProject
com.cleanup.todoc.model.Project <|-- com.cleanup.todoc.model.TaskProject
com.cleanup.todoc.model.TaskProject <|-- com.cleanup.todoc.ui.TasksAdapter
com.cleanup.todoc.ui.TasksAdapter <|-- com.cleanup.todoc.ui.MainActivity
com.cleanup.todoc.database.TodocViewModel <|-- com.cleanup.todoc.ui.MainActivity
com.cleanup.todoc.model.TaskProject <|-- com.cleanup.todoc.ui.MainActivity
com.cleanup.todoc.model.Project <|-- com.cleanup.todoc.ui.MainActivity
com.cleanup.todoc.database.daos.TaskDao <|-- com.cleanup.todoc.database.TaskRepository
com.cleanup.todoc.database.daos.ProjectDao <|-- com.cleanup.todoc.database.TaskRepository
com.cleanup.todoc.database.TaskRepository <|-- com.cleanup.todoc.database.TodocViewModel
@enduml